2nd approach sollution with minor issues